# OpenDiSFileReader

./: README.md  pyproject.toml
examples/: ReaderExample_01.ovito
src/OpenDiSFileReader/: __init__.py
