[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenDiSFileReader"
version = "2024.0"
description = "File reader for the OpenDiS data format"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ovito >= 3.10.6",
]

[project.urls]
repository = "https://github.com/ovito-org/OpenDiSFileReader"

[project.entry-points.'OVITO.FileReader']
"OpenDiS File Reader" = "OpenDiSFileReader:OpenDiSFileReader"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]